--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>
     <header>
       <div class="logo">
-      <a href="https://www.freepik.com" title="Freepik" target = "_blank"> <img src= "infinity.png" alt ="" class ="logo__img"> </a> <!-- from  https://www.flaticon.com </a></div>-->
+      <a href="index.html" title="Freepik" target = "_blank"> <img src= "infinity.png" alt ="" class ="logo__img"> </a> <!-- made by https://www.freepik.com from  https://www.flaticon.com </a></div>-->
       </div>
       <button class ="nav-toggle" aria-label="toggle navigaton">
           <span class = "hamburger"></span>
@@ -51,12 +51,12 @@
                <!-- <a href="#" class="project__item"> </a> -->
                <img src="catsimage.png" alt="" class="project__img">
         
-                <p> This was an class project for CS61A at the University of California, Berkeley. In this project, I wrote a program that measures typing speed. I also implement features like autocorrect, which is a feature that attempts to correct the spelling of a word after a user types it. In the image to the left you can see the attempts of autocorrect where green means it sucessfully autocorrected the misspelled word. </p>
+                <p class="project__p"> This was an class project for CS61A at the University of California, Berkeley. In this project, I wrote a program that measures typing speed. I also implement features like autocorrect, which is a feature that attempts to correct the spelling of a word after a user types it. In the image to the left you can see the attempts of autocorrect where green means it sucessfully autocorrected the misspelled word. </p>
            </div>
            <div class = "project__item__div"> <!-- <a href="#" class="project__item"> </a> -->
                <img src="schemeproject.png" alt="" class="project__img">
         
-                <p> This was also another class project for CS61A at the University of California, Berkeley. In this project, I developed an interpreter for a subset of the Scheme language. This project allowed me to think about issues that arise in the design of a programming language; many quirks of languages are byproducts of implementation decisions in interpreters and compilers (CS61A, Fall 2021). </p> </div>
+                <p class = "project__p"> This was also another class project for CS61A at the University of California, Berkeley. In this project, I developed an interpreter for a subset of the Scheme language. This project allowed me to think about issues that arise in the design of a programming language; many quirks of languages are byproducts of implementation decisions in interpreters and compilers (CS61A, Fall 2021). </p> </div>
 
         </div>
       </section>
@@ -67,7 +67,9 @@
       <a href="#" class="footer__link"></a>
       <ul class="social-list">
         <li class="social-list__item"><a href="https://www.linkedin.com/in/ali-alkahli-12bb63195/" target="_blank">LinkedIn</a></li>
-        <li class="social-list__item"><a href="https://jumpstart.me/profile/ali-alkahli" target="_blank">JumpStart</a></li>
+        <li class="social-list__item"><a href="https://github.com/alialkahli123" target="_blank">GitHub</a></li>
+        <li class="social-list__item"><a href="index.html" target="_blank">Blog</a></li>
+
 
       </ul>
     </footer>
