--- a/index.html
+++ b/index.html
@@ -65,10 +65,15 @@
 
       <footer>
       <a href="#" class="footer__link"></a>
+      <div class = "div__footer">
+      <img src= "linkedin.png" alt="LinkedIn" class= "footer__img">
+     <img src= "github64px.png" alt="GitHub" class= "footer__img">
+        <img src= "infinity.png" alt = "Infinity Blog" class = "footer__img"></div>
+      <!--
       <ul class="social-list">
         <li class="social-list__item"><a href="https://www.linkedin.com/in/ali-alkahli-12bb63195/" target="_blank">LinkedIn</a></li>
         <li class="social-list__item"><a href="https://github.com/alialkahli123" target="_blank">GitHub</a></li>
-        <li class="social-list__item"><a href="index.html" target="_blank">Blog</a></li>
+        <li class="social-list__item"><a href="index.html" target="_blank">Blog</a></li> -->
 
 
       </ul>
