Footer Completed With Links

--- a/index.html
+++ b/index.html
@@ -66,9 +66,16 @@
       <footer>
       <a href="#" class="footer__link"></a>
       <div class = "div__footer">
-      <img src= "linkedin.png" alt="LinkedIn" class= "footer__img">
-     <img src= "github64px.png" alt="GitHub" class= "footer__img">
-        <img src= "infinity.png" alt = "Infinity Blog" class = "footer__img"></div>
+          <a href="https://www.linkedin.com/in/ali-alkahli-12bb63195/" class="a__footer" target= "_blank">
+              <img src= "linkedin.png" alt="LinkedIn" class= "footer__img "></a>
+          <a href="https://github.com/alialkahli123" target= "_blank">
+              <img src= "github64px.png" alt="GitHub" class= "footer__img">
+          </a>
+          <a href= "#">
+            <img src= "infinity.png" alt = "Infinity Blog" class = "footer__img">
+          </a>
+        
+      </div>
       <!--
       <ul class="social-list">
         <li class="social-list__item"><a href="https://www.linkedin.com/in/ali-alkahli-12bb63195/" target="_blank">LinkedIn</a></li>
