--- a/index.html
+++ b/index.html
@@ -67,11 +67,13 @@
       <a href="#" class="footer__link"></a>
       <div class = "div__footer">
           <a href="https://www.linkedin.com/in/ali-alkahli-12bb63195/" class="a__footer" target= "_blank">
-              <img src= "linkedin.png" alt="LinkedIn" class= "footer__img "></a>
-          <a href="https://github.com/alialkahli123" target= "_blank">
+              <img src= "linkedin.png" alt="LinkedIn" class= "footer__img"></a>
+
+          <a href="https://github.com/alialkahli123" class = "a__footer"target= "_blank">
               <img src= "github64px.png" alt="GitHub" class= "footer__img">
           </a>
-          <a href= "#">
+
+          <a href= "#" class = "a__footer">
             <img src= "infinity.png" alt = "Infinity Blog" class = "footer__img">
           </a>
         
@@ -80,10 +82,10 @@
       <ul class="social-list">
         <li class="social-list__item"><a href="https://www.linkedin.com/in/ali-alkahli-12bb63195/" target="_blank">LinkedIn</a></li>
         <li class="social-list__item"><a href="https://github.com/alialkahli123" target="_blank">GitHub</a></li>
-        <li class="social-list__item"><a href="index.html" target="_blank">Blog</a></li> -->
+        <li class="social-list__item"><a href="index.html" target="_blank">Blog</a></li> </ul>-->
 
 
-      </ul>
+      
     </footer>
     <script src="index.js"> </script>
 
